# tuplers

./: Cargo.toml  LICENSE  README.md  build.rs  code_gen.rs  gen_code.ps1  gen_code.sh  rustfmt.toml
code_gen/: Cargo.toml
code_gen/src/: code_gen.rs  main.rs
src/: cloned.rs  combin.rs  flatten.rs  lib.rs  transpose.rs  tuple_as.rs  tuple_iter.rs  tuple_map.rs
tests/: test.rs  test_macro_tuple.rs  test_map.rs
tuples/: Cargo.toml
tuples/src/: afn.rs  apply_tuple.rs  capt.rs  clone.rs  cloned.rs  combin.rs  combinations.rs  convert.rs  flatten.rs  get.rs  get2.rs  lib.rs  map.rs  misc.rs  param.rs  permutations.rs  sort.rs  transpose.rs  tuple_as.rs  tuple_call.rs  tuple_get.rs  tuple_iter.rs  tuple_map.rs  tuple_swap_n.rs  uniform_map.rs  uniform_map_by.rs
tuples/src/split/: split_at.rs  split_by.rs  split_parts.rs  split_to_tuple_at.rs  split_to_tuple_by.rs
tuples/tests/: test.rs  test_iter.rs  test_macro_tuple.rs  test_map.rs  test_meta.rs
