[package]
name = "tuples"
version = "0.1.0"
authors = ["BatchOperator", "2A5F <u2a5f@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std", "tuple_combin", "tuple_iter", "tuple_map", "re-exports"]
re-exports = []
std = []
tuple_iter = []
tuple_map = []
tuple_combin = []

[build-dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"