[package]
authors = ["LibSugar", "2A5F <u2a5f@outlook.com>"]
categories = ["rust-patterns", "no-std"]
description = "Provides many useful tools related to tuples"
edition = "2018"
keywords = ["tuple", "iterator", "meta"]
license = "MIT"
name = "tuples"
readme = "../README.md"
repository = "https://github.com/libsugar/tuplers"
version = "1.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
cloned = []
combin = []
default = [
  "combin",
  "split",
  "tuple_iter",
  "tuple_map",
  "transpose",
  "tuple_as",
  "tuple_meta",
  "shorthand",
  "flatten",
  "cloned",
  "tuple_call",
  "re-exports",
]
flatten = []
re-exports = []
shorthand = []
split = ["split_parts", "split_by", "split_to_tuple_by", "split_at", "split_to_tuple_at"]
split_at = []
split_by = []
split_parts = []
split_to_tuple_at = []
split_to_tuple_by = []
transpose = []
tuple_as = []
tuple_call = []
tuple_iter = []
tuple_map = []
tuple_meta = []
