[package]
authors = ["LibSugar", "2A5F <u2a5f@outlook.com>"]
categories = ["rust-patterns", "no-std"]
description = "Provides many useful tools related to tuples"
edition = "2024"
keywords = ["tuple", "iterator", "meta"]
license = "MIT"
name = "tuples"
readme = "../README.md"
repository = "https://github.com/libsugar/tuplers"
version = "2.0.0-beta.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
all = ["default"]
apply_tuple = []
capt = []
clone = []
combin = []
combinations = []
convert = []
default = [
  "get",
  "convert",
  "apply_tuple",
  "combin",
  "split",
  "tuple_iter",
  "tuple_map",
  "transpose",
  "shorthand",
  "flatten",
  "clone",
  "tuple_call",
  "re-exports",
  "capt",
  "sort",
  "permutations",
  "combinations",
  "uniform_map",
  "uniform_map_by",
]
flatten = []
get = []
permutations = []
re-exports = []
shorthand = []
sort = ["get"]
split = ["split_parts", "split_by", "split_to_tuple_by", "split_at", "split_to_tuple_at"]
split_at = []
split_by = []
split_parts = []
split_to_tuple_at = []
split_to_tuple_by = []
transpose = []
tuple_call = []
tuple_iter = []
tuple_map = []
uniform_map = []
uniform_map_by = []

[package.metadata.docs.rs]
all-features = true
